<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="60dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/emailText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />


            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email_hint"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailText" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/password_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="@dimen/login_width"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password_hint"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordText" />

            <Button
                android:id="@+id/loginButton"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="25dp"
                android:text="@string/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <TextView
                android:id="@+id/newUserText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dont_have_an_account"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <Button
                android:id="@+id/newUserButton"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="16dp"
                android:text="@string/new_user_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newUserText"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>