<?xml version="1.0" encoding="utf-8"?>
<layout>
<!-- For Onboarding screens, a simple LinearLayout should suffice, since this involves only 2 textviews and a button to be displayed -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_instructions"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:minLines="2"
        android:textAlignment="center"
        style="@style/TextStyle"
        android:text="@string/instructions_text" />

    <TextView
        android:id="@+id/instructionMinorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:text="@string/instructions_minor_text"
        android:textAlignment="center"
        android:minLines="2"
        style="@style/TextStyle" />

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        style="@style/ButtonStyle"
        android:text="@string/proceed_button"/>


</LinearLayout>
</layout>